--- a/trunk/eea.eggmonkey/trunk/docs/HISTORY.txt
+++ b/trunk/eea.eggmonkey/trunk/docs/HISTORY.txt
@@ -2,7 +2,7 @@ Changelog
 =========
 [Tiberiu Ichim - tiberiu.ichim@eaudeweb.ro]
 
-0.1 - (2010-09-16)
-------------------
+0.2-dev - (2010-09-16)
+----------------------
  * Initial commit [tiberich]
 
