--- a/trunk/eea.eggmonkey/trunk/docs/HISTORY.txt
+++ b/trunk/eea.eggmonkey/trunk/docs/HISTORY.txt
@@ -2,6 +2,10 @@ Changelog
 =========
 [Tiberiu Ichim - tiberiu.ichim@eaudeweb.ro]
 
+0.3 - (2010-09-16)
+------------------
+ * Fix wrong name for setup.py inside the monkey module
+
 0.2 - (2010-09-16)
 ------------------
  * mkrelease fails with error due to inexistent register command on eggrepo,
