--- a/trunk/eea.eggmonkey/trunk/docs/HISTORY.txt
+++ b/trunk/eea.eggmonkey/trunk/docs/HISTORY.txt
@@ -2,8 +2,10 @@ Changelog
 =========
 [Tiberiu Ichim - tiberiu.ichim@eaudeweb.ro]
 
-0.9-dev - (unreleased)
-----------------------
+0.9 - (2010-09-16)
+------------------
+ * Update readme file with details about python2.6 requirement
+ * 
 
 0.8 - (2010-09-16)
 ------------------
