--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -2,6 +2,9 @@ Changelog
 =========
 [Tiberiu Ichim - tiberiu.ichim@eaudeweb.ro]
 
+0.10-dev - (unreleased)
+-----------------------
+
 0.9 - (2010-09-16)
 ------------------
  * Update readme file with details about python2.6 requirement
