Prepare eea.eggmonkey 0.10.

--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -2,13 +2,13 @@ Changelog
 =========
 [Tiberiu Ichim - tiberiu.ichim@eaudeweb.ro]
 
-0.10-dev - (unreleased)
------------------------
+0.10 - (2010-09-17)
+-------------------
+ * Add sanity checks for mkrelease script and package path
 
 0.9 - (2010-09-16)
 ------------------
  * Update readme file with details about python2.6 requirement
- * 
 
 0.8 - (2010-09-16)
 ------------------
