--- a/trunk/eea.eggmonkey/trunk/docs/HISTORY.txt
+++ b/trunk/eea.eggmonkey/trunk/docs/HISTORY.txt
@@ -4,6 +4,9 @@ Changelog
 
 0.11-dev - (unreleased)
 -----------------------
+ * Use colored ouput to make eggmonkey messages easier to distinguish
+ * Check if versions.cfg exists before starting
+ * Get input from user in case of error when doing mkrelease, if used with -m flag
 
 0.10 - (2010-09-17)
 -------------------
