--- a/trunk/eea.eggmonkey/trunk/docs/HISTORY.txt
+++ b/trunk/eea.eggmonkey/trunk/docs/HISTORY.txt
@@ -2,6 +2,9 @@ Changelog
 =========
 [Tiberiu Ichim - tiberiu.ichim@eaudeweb.ro]
 
+0.14-dev - (unreleased)
+-----------------------
+
 0.13 - (2010-09-28)
 -------------------
  * Feature: check that the version that we get from parsing files is valid [tiberich #3642]
