Write MANIFEST.in file if it's missing; refs #7749

--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -4,6 +4,7 @@ Changelog
 
 0.19-dev - (unreleased)
 -----------------------
+ * Add MANIFEST.in file when it's missing
 
 0.18 - (2010-09-30)
 -------------------
