--- a/trunk/eea.eggmonkey/trunk/docs/HISTORY.txt
+++ b/trunk/eea.eggmonkey/trunk/docs/HISTORY.txt
@@ -2,6 +2,9 @@ Changelog
 =========
 [Tiberiu Ichim - tiberiu.ichim@eaudeweb.ro]
 
+0.20-dev - (unreleased)
+-----------------------
+
 0.19 - (2010-10-20)
 -------------------
  * Add MANIFEST.in file when it's missing
