--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -2,9 +2,10 @@ Changelog
 =========
 [Tiberiu Ichim - tiberiu.ichim@eaudeweb.ro]
 
-0.20-dev - (unreleased)
------------------------
+0.20 - (2010-10-28)
+-------------------
  * Feature: Added --python configuration option to be used with manual upload [tiberich]
+ * Change: refactored message printing [tiberich]
 
 0.19 - (2010-10-20)
 -------------------
