--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -2,6 +2,9 @@ Changelog
 =========
 [Tiberiu Ichim - tiberiu.ichim@eaudeweb.ro]
 
+0.21-dev - (unreleased)
+-----------------------
+
 0.20 - (2010-10-28)
 -------------------
  * Feature: Added --python configuration option to be used with manual upload [tiberich]
