--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -2,8 +2,9 @@ Changelog
 =========
 [Tiberiu Ichim - tiberiu.ichim@eaudeweb.ro]
 
-0.21-dev - (unreleased)
------------------------
+0.21 - (2010-10-29)
+-------------------
+ * Bug fix: Run svn up before processing a package [tiberich #3806]
 
 0.20 - (2010-10-28)
 -------------------
