--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -2,6 +2,9 @@ Changelog
 =========
 [Tiberiu Ichim - tiberiu.ichim@eaudeweb.ro]
 
+0.23-dev - (unreleased)
+-----------------------
+
 0.22 - (2010-11-10)
 -------------------
  * Change: Add tests for version incrementing [tiberich #3807]
