--- a/trunk/eea.eggmonkey/trunk/docs/HISTORY.txt
+++ b/trunk/eea.eggmonkey/trunk/docs/HISTORY.txt
@@ -2,6 +2,9 @@ Changelog
 =========
 [Tiberiu Ichim - tiberiu.ichim@eaudeweb.ro]
 
+0.24-dev - (unreleased)
+-----------------------
+
 0.23 - (2010-11-10)
 -------------------
  * Change: Improve svn commit message when changing version to -dev [tiberich #3807]
