--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -4,6 +4,9 @@ Changelog
 
 0.25-dev - (unreleased)
 -----------------------
+ * Feature: use collective.dist to check for package metadata validity [tiberich #3851]
+ * Feature: now you can specify multiple repositories to register and upload egg [tiberich #3850]
+ * Change: use exception raising for exiting the program [tiberich]
 
 0.24 - (2010-11-11)
 -------------------
