Prepare eea.eggmonkey 0.26.

--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -2,8 +2,9 @@ Changelog
 =========
 [Tiberiu Ichim - tiberiu.ichim@eaudeweb.ro]
 
-0.26-dev - (unreleased)
------------------------
+0.26 - (2010-11-19)
+-------------------
+ * Bug fix: fix bug in releasing egg with -u switch [tiberich]
 
 0.25 - (2010-11-16)
 -------------------
