--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -4,6 +4,7 @@ Changelog
 
 0.28-dev - (unreleased)
 -----------------------
+ * Bug fix: take out -q flag when doing easy_install, as it is not supported [tiberich]
 
 0.27 - (2010-11-22)
 -------------------
