--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -4,6 +4,7 @@ Changelog
 
 0.30-dev - (unreleased)
 -----------------------
+ * Change: use the --quiet flag when running setup sdist on manual-upload operations [tiberich]
 
 0.29 - (2010-12-10)
 -------------------
