--- a/trunk/eea.eggmonkey/trunk/docs/HISTORY.txt
+++ b/trunk/eea.eggmonkey/trunk/docs/HISTORY.txt
@@ -4,6 +4,8 @@ Changelog
 
 0.30-dev - (unreleased)
 -----------------------
+ * Cleanup: of pyflakes warnings [ichimdav #4141]
+ * Cleanup: of pylint violations [ichimdav #4140]
  * Change: use the --quiet flag when running setup sdist on manual-upload operations [tiberich]
  * Bug fix: print steps and instructions when exiting because of error [tiberich]
 
