Added a print_unreleased_packages script to eea.eggmonkey that will print packages that have entries in the first section of the HISTORY.txt file (if they have entries there, it means they have manually added info; eea.eggmonkey creates the first section as empty)

--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -4,6 +4,7 @@ Changelog
 
 0.30-dev - (unreleased)
 -----------------------
+ * Feature: added print_unreleased_packages console script that will print packages where the history is dirty [tiberich]
  * Cleanup: of pyflakes warnings [ichimdav #4141]
  * Cleanup: of pylint violations [ichimdav #4140]
  * Change: use the --quiet flag when running setup sdist on manual-upload operations [tiberich]
